# trignoclient

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists_catkin.txt  README.md  package.xml  trignoclientConfig.cmake.in
examples/: custom_protocol.cpp  example_client.cpp  example_io.cpp  example_protocol.cpp  plot_sequence.cpp  query_server.cpp
include/trignoclient/: aux_data_client.hpp  aux_types.hpp  basic_data_client.hpp  basic_protocol.hpp  basic_sequence_processor.hpp  client.hpp  configuration.hpp  core.hpp  duration.hpp  emg_data_client.hpp  exporter.hpp  frame.hpp  interface.hpp  io.hpp  iterative.hpp  logger.hpp  mvc.hpp  network.hpp  plotter.hpp  recorder.hpp  sample.hpp  scaler.hpp  sensor.hpp  sequence.hpp  sequence_metrics.hpp  tools.hpp  trignoclient.hpp
include/trignoclient/core/: frame.hpp  io.hpp  sample.hpp  sensor.hpp  sequence.hpp
include/trignoclient/network/: aux_data_client.hpp  basic_configurator.hpp  basic_data_client.hpp  client.hpp  configuration.hpp  emg_data_client.hpp  interface.hpp
include/trignoclient/std/: basic_executor.hpp  cast_iterator.hpp  duration.hpp  indexer.hpp  not_implemented.hpp  range_iterator.hpp  sorted_indexer.hpp  tagged.hpp  tcp_client.hpp  test  utils.hpp
include/trignoclient/tools/: basic_protocol.hpp  basic_sequence_processor.hpp  exporter.hpp  iterative.hpp  logger.hpp  plotter.hpp  recorder.hpp  sequence_metrics.hpp
src/: aux_data_client.cpp  basic_configurator.cpp  basic_data_client.cpp  basic_protocol.cpp  client.cpp  configuration.cpp  emg_data_client.cpp  exporter.cpp  frame.cpp  interface.cpp  io.cpp  logger.cpp  mvc.cpp  plotter.cpp  recorder.cpp  sample.cpp  sequence.cpp  sequence_metrics.cpp  test.cpp
src/core/: frame.cpp  io.cpp  sample.cpp  sequence.cpp
src/examples/: example_client.cpp  example_io.cpp  example_query.cpp  example_tools.cpp
src/network/: aux_data_client.cpp  basic_configurator.cpp  basic_data_client.cpp  client.cpp  configuration.cpp  emg_data_client.cpp  interface.cpp
src/tools/: basic_protocol.cpp  exporter.cpp  logger.cpp  mvc.cpp  plotter.cpp  recorder.cpp  sequence_metrics.cpp
