<?xml version="1.0"?>
<package format="2">
  <name>trignoclient</name>
  <version>0.9.0</version>
  <description>C++ library with tools for managing a Trigno® Research+ System, as well as acquiring and processing acquired data.</description>

  <maintainer email="joaocandre@gmail.com">João André</maintainer>
  <license>MIT</license>
  <url type="repository">https://github.com/BiRDLab-UMinho/trignoclient</url>
  <author email="joaocandre@gmail.com">João André</author>

  <buildtool_depend>cmake</buildtool_depend>
  
  <export>
    <build_type>cmake</build_type>
  </export>

</package>